--- a/mindsweeper/gui/src/Home.scss
+++ b/mindsweeper/gui/src/Home.scss
@@ -1,4 +1,8 @@
 .home {
+    img {
+        user-select: none;
+        -webkit-user-select: none;
+    }
  margin-left: auto;
  margin-right: auto;
  display: flex;
